styles/index.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

header {
  text-align: center;
  font: 36px 'Alegreya SC', serif;
}

main {
  display: grid;
  place-items: center;
  width: 100vw;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

div {
  display: grid;
  gap: 20px;
}

div {
  text-align: left;
  margin: 0 20px;
}

h1 {
  font: 500 25px 'Poppins', sans-serif;
}

p {
  font: 400 15.2px 'Poppins', sans-serif;
}

a.button {
  background: #242424;
  text-decoration: none;
  color: #FFFFFF;
  font: 600 22.36px 'Poppins', sans-serif;
  padding: 6.08px 15.53px 7.02px;
  border-radius: 9.32px;
  margin: 0 auto 52.98px;
}

@media (min-width: 1152px) {
  header {
    text-align: left;
    margin-left: 77px;
  }

  main {
    display: flex;
    flex-direction: row;
  }

  div {
    margin-left: 77px;
  }

  h1, p {
    text-align: left;
  }

  h1 {
    font-size: 50px;
  }

  img {
    width: 600px;
    height: 500px;
    margin: 0 0 0 50px;
  }

  a.button {
    margin: 0 auto 0 0;
  }
}

